--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,8 @@ license = "MIT"
 publish = false
 
 [dependencies]
+rocket = "~0.4.5"
+
+[dependencies.rocket_contrib]
+version = "~0.4.5"
+features = ["handlebars_templates"]
