--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,8 @@ publish = false
 [dependencies]
 rocket = "~0.4.5"
 
+serde = { version = "~1.0.117", features = ["derive"] }
+
 [dependencies.rocket_contrib]
 version = "~0.4.5"
 features = ["handlebars_templates"]
