--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ rocket = "~0.4.5"
 
 pulldown-cmark = "~0.8.0"
 
+serde_json = "~1.0.59"
 serde = { version = "~1.0.117", features = ["derive"] }
 
 [dependencies.rocket_contrib]
